# mustard

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  CAtizmustard.claude.pipeline-states2026-05-20-mustard-wave-network-standard.diff-apps_rt.md  CAtizmustard.claude.pipeline-states2026-05-20-mustard-wave-network-standard.diff-packages_core.md  IMPLEMENTACAO-MUSTARD-2.md  MUSTARD-COMMANDS.md  NOTICE.md  README.en.md  README.md  TUTORIAL.md  curso-mustard.html  eslint.config.js  index.html  install-retrieval.ps1  install.ps1  mustard.json  package-lock.json  package.json  pnpm-lock.yaml
apps/cli/: CLAUDE.md  Cargo.toml
apps/cli/.claude/: .cluster-cache.json  scan-map.md
apps/cli/.claude/commands/: guards.md  modules.md  notes.md  patterns.md  recipes.md  stack.md
apps/cli/src/: cli.rs  fs_ops.rs  lib.rs  main.rs  npm.rs  runtime.rs
apps/cli/src/commands/: add.rs  auto_update.rs  config.rs  git_flow.rs  init.rs  install_grammars.rs  install_nerd_font.rs  mod.rs  review.rs  update.rs
apps/cli/templates/: .artifacts.json  .gitignore  CLAUDE.md  pipeline-config.md  settings.json
apps/cli/templates-extras/: .artifacts.json
apps/cli/templates/.obsidian/: .gitignore  app.json
apps/cli/templates/agents/: mustard-patterns.md  mustard-review.md
apps/cli/templates/recipes/: add-component.json  add-validation.json
apps/cli/templates/refs/: digest-validate.md  locating-code.md
apps/cli/tests/: template_budget.rs
apps/cli/tools/: prd-builder.html
apps/dashboard/src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/.claude/: scan-map.md
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/src/: amend_queries.rs  artifact_update.rs  db.rs  discovery.rs  economy.rs  file_read.rs  git_info.rs  lib.rs  main.rs  prd_lapidator.rs  project_overview.rs  projects.rs  spec_views.rs  telemetry.rs  telemetry_agg.rs  watcher.rs
apps/dashboard/src-tauri/src-tauri/: tauri.conf.json
apps/dashboard/src-tauri/tests/: db_test.rs  mustard_cli_test.rs  pipelines_from_db_test.rs  specs_phase_from_events_test.rs  telemetry_aggregations_test.rs  telemetry_test.rs  top_files_today_test.rs
apps/embed/: Cargo.toml
apps/embed/src/: main.rs
apps/mcp/: CLAUDE.md  Cargo.toml
apps/mcp/.claude/: scan-map.md
apps/mcp/src/: lib.rs
apps/rt/: CLAUDE.md  Cargo.toml
apps/rt/.claude/: .cluster-cache.json  scan-map.md
apps/rt/.claude/.agent-state/: main-context.counter.json
apps/rt/.claude/commands/: guards.md  modules.md  notes.md  patterns.md  recipes.md  stack.md
apps/rt/scripts/: ac_check_claude_join.js  cleanup-legacy-claude.ps1
apps/rt/scripts/scan/: agent-prompt.template.md
apps/rt/src/: dispatch.rs  lib.rs  main.rs  protocol.rs  registry.rs
apps/rt/src/commands/: context_cli.rs  digest_precision.rs  enrich.rs  enrich_purpose.rs  feature.rs  feature_retrieval.rs  git_cli.rs  git_settle.rs  glossary_coverage.rs  grill_capture.rs  lexicon_enrich.rs  lexicon_judge.rs  lexicon_suggest.rs  mod.rs  orient.rs  purpose_judge.rs  recall_bench.rs  scan.rs  scan_claude.rs  scan_cli.rs  scan_equivalences.rs  work_unit_open.rs
apps/rt/src/hooks/: amend_capture.rs  auto_capture_summary.rs  bash_guard.rs  budget.rs  close_gate.rs  enforce_registry.rs  knowledge.rs  mod.rs  model_routing.rs  notification.rs  path_guard.rs  post_edit.rs  pre_compact.rs  pre_edit_intent_check.rs  prompt_gate.rs  session_cleanup.rs  session_start.rs  size_gate.rs  skills_audit.rs  spec_hygiene.rs  stop.rs  stop_observer.rs  subagent_inject.rs  tool_result.rs  tracker.rs  wikilink_footer.rs  worktree_create.rs
apps/rt/src/mcp/: mod.rs  tests.rs
apps/rt/src/report/: mod.rs
apps/rt/src/run/: active_specs.rs  adapt_cursor.rs  agent_prompt_render.rs  agent_prompt_template.md  amend_finalize.rs  analyze_validation.rs  artifact_update.rs  backfill_run_usage_spec.rs  backup_specs.rs  blob_spill.rs  bugfix_cache.rs  claude_dir_prune.rs  close_orchestrate.rs  complete_spec.rs  context_budget.rs  context_slice.rs  db_maintain.rs  dependency_precheck.rs  diff_context.rs  docs_stale_check.rs  doctor.rs  doctor_workspace_leaks.rs  economy_capture_baseline.rs  economy_reconcile.rs  economy_report.rs  emit_event.rs  emit_phase.rs  emit_pipeline.rs  env.rs  epic_fold.rs  event_projections.rs  knowledge.rs  (+79 more)
apps/rt/tests/: amend_capture.rs  amend_finalize.rs  approval_refusal_explains.rs  artifact_apply.rs  complete_spec_emits_qa.rs  dispatch_warns_on_uncurated_rules.rs  doctor_known_events.rs  doctor_reports_uncurated_rule_scaffolds.rs  emit_pipeline_kinds.rs  glossary_inflections.rs  hygiene_event_kinds.rs  mcp.rs  memory_sqlite_test.rs  metrics_collect_events.rs  metrics_counters_unknown.rs  migrate_spec_headers.rs  pipeline_state_projection_test.rs  plan_approval_marker.rs  rtk_rewrite_emission.rs  run_command_surface.rs  scan_cold_path.rs  spec_children_tree.rs  spec_draft_context_prose.rs  spec_draft_events_only_dir.rs  spec_hygiene.rs  spec_invariants.rs  status_sync_integration.rs  template_parity.rs  unhook_preserves_permissions.rs  validation_file_refs.rs  wave_scaffold_contract.rs  wikilink_footer_hook.rs  worktree_redirect.rs
apps/scan/: CLAUDE.md  Cargo.toml  build.rs  generated-markers.toml  languages.toml  manifests.toml  ranking.toml  stopwords.toml  test-dirs.toml
apps/scan/.claude/: scan-map.md
apps/scan/queries/: README.md  kinds-manifest.toml
apps/scan/src/: classify.rs  dictionary.rs  digest.rs  extract.rs  facts.rs  graph.rs  ingest.rs  main.rs  manifests.rs  matching.rs  mine.rs  model.rs  pagerank.rs  purpose.rs  rank.rs  spec.rs  stemmers.rs
apps/scan/stoplists/: pt.txt
apps/scan/tests/: anchor_ranking.rs  concern_split.rs  generated_class.rs  graph_resolution.rs  kinds_parity.rs  match_tiers.rs  php_extraction.rs  php_laravel_fixture.rs  pick_slice.rs  skip_dirs_excludes_claude.rs  spec_like.rs  stack_detection_e2e.rs  stack_evidence_excludes.rs  stratified_samples.rs  term_index.rs
apps/translate/: CLAUDE.md  Cargo.toml
apps/translate/.claude/: scan-map.md
apps/translate/src/: main.rs
(+3220 files in other folders)
