[workspace]
resolver = "2"
members = ["apps/cli", "apps/rt", "packages/core"]
# Intentionally excluded: edition-2021 / rust-1.77 Tauri shell with its own
# Cargo.lock and pinned deps. Keeping it out of the workspace means a normal
# `cargo build --workspace` ignores it (the dashboard is built via
# `pnpm dashboard:dev` / `pnpm dashboard:build`).
exclude = ["apps/dashboard/src-tauri"]

# Single source of dependency-version truth for every Mustard crate. A crate
# opts in with `dep = { workspace = true }`; the dashboard crate keeps its own
# inline deps (Tauri-pinned, edition 2021) and does not consume this table.
# Versions verified against crates.io, May 2026 (see spec b2 § Stack Rust).
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.24"
insta = "1.47.2"
tempfile = "3.27.0"
# Interactive terminal prompts for the CLI port (`mustard init` git-flow wizard).
# Replaces the JS `inquirer` dependency. Pure-Rust, no async runtime.
dialoguer = "0.12"
# HTTP client for the CLI port — `add` (npm tarball download), `review` (Claude
# API), `auto-update` (npm registry). Blocking, no async runtime, matching the
# synchronous shape of the rest of the crate. Versions verified against
# crates.io, May 2026.
ureq = { version = "3.3", features = ["json"] }
# Tarball extraction for `mustard add` (npm package payloads ship as .tgz).
tar = "0.4.46"
flate2 = "1.1.9"
# Zip extraction for the Windows RTK auto-installer (`init`/`update`): RTK
# GitHub releases ship the Windows binary as a `.zip`. Latest stable on
# crates.io, May 2026.
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
# Official Rust SDK for the Model Context Protocol — backs the `mcp` face of
# `mustard-rt` (the re-port of the `mustard-memory` TypeScript MCP server).
# The `server` feature already pulls `macros` (in `default`) and `schemars`;
# `transport-io` adds the stdio (JSON-RPC over stdin/stdout) transport. Pinned
# to the latest stable verified on crates.io (1.7.0, May 2026); the 1.x line
# has a substantially different API from the 0.x series.
rmcp = { version = "1.7", features = ["server", "transport-io"] }
# Async runtime — required only by `rmcp` (async-only). Scoped to the `mcp`
# face: the handler builds a `current_thread` runtime locally so the `on` /
# `run` / `check` faces stay fully synchronous. Latest stable verified on
# crates.io (1.52, May 2026).
tokio = { version = "1.52.3", features = ["rt", "io-std", "macros"] }
# BPE tokenizer used by `core::economy::estimator` as a Claude-token
# approximation (cl100k_base ≈ Anthropic models within ~5%). Latest stable
# verified on crates.io (0.11.0, 2026-04-08); the 0.10+ line renamed
# `get_completion_max_tokens` and added the o200k_harmony singleton.
tiktoken-rs = "0.11"
# Cross-platform filesystem notification — used by `mustard-rt` for the opt-in
# `transcript-watcher` daemon (Wave 3 of economia-moat-unification). Pinned to
# the 6.x line because `apps/dashboard/src-tauri` already vendors `notify = "6"`
# (via `notify-debouncer-mini = "0.4"`), so reusing the same major keeps the
# workspace on a single `notify` graph rather than splitting it. Latest stable
# is 8.2 on crates.io (May 2026); a future workspace-wide bump can move both
# crates together.
notify = "6"
# Data-parallelism primitives — `mustard-rt run sync-registry` uses rayon to
# parallelise the single-pass file visitor (`scan::file_utils::visit`) so each
# subproject is read once across all scanners instead of once per faceta.
# Latest stable on crates.io (1.10, May 2026); pure-Rust, no async runtime.
rayon = "1.10"

# Workspace-wide lints. A crate opts in with `[lints] workspace = true`.
# Only `mustard-core` opts in today; the dashboard crate is intentionally
# excluded so its edition-2021 / rust-1.77 build is unaffected.
[workspace.lints.rust]
# A hook on the critical path must never reach for `unsafe`.
unsafe_code = "forbid"

[workspace.lints.clippy]
# Pedantic is enabled to catch real bugs (filter_next, map_unwrap_or, manual_*
# anti-patterns, format_push_string, etc.). Per Clippy's own guidance, the
# group "contains opinionated lints ... users should expect to use allow
# attributes frequently" — so the explicitly-noisy/opinionated members are
# listed below as `allow`, while bug-catchers remain `warn`. Group has lower
# `priority` than overrides — Cargo rejects equal-priority ambiguity.
pedantic = { level = "warn", priority = -1 }

# Pedantic lints muted at workspace level — pure style/opinion, no bug value
# for a single-binary internal runtime (no public API surface).
#
# Documentation noise (no published API)
missing_errors_doc = "allow"      # internal hooks, no rustdoc consumers
missing_panics_doc = "allow"      # same
doc_markdown = "allow"            # demands backticks around every CamelCase
module_name_repetitions = "allow" # Clippy's own README example allows this
must_use_candidate = "allow"      # same
#
# Cast lints — flag any numeric cast. The codebase has many intentional
# `i64 <-> usize/u64` conversions for SQLite row counts, sizes, indices.
# Promoted to allow only after auditing: every cast in apps/rt is bounded
# (counts, file sizes, kb-scale offsets). If a real overflow risk surfaces,
# add `#[deny(...)]` at the call site.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
#
# Function-shape opinions (no public API to police)
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
unused_self = "allow"             # often intentional for trait dispatch
items_after_statements = "allow"  # late helper fns are clearer locally
#
# Naming opinions
similar_names = "allow"           # "store" vs "score" is not a bug
many_single_char_names = "allow"  # common in algorithm/parsing code
#
# Stylistic preferences (cosmetic, no bug catch)
if_not_else = "allow"
single_match_else = "allow"
match_same_arms = "allow"
default_trait_access = "allow"
bool_to_int_with_if = "allow"
ref_option = "allow"
needless_pass_by_value = "allow"  # sometimes required for trait obj / generics
redundant_closure_for_method_calls = "allow"
# W2 (claude-paths-single-source): the `ClaudePaths::for_project` fallback
# pattern `.map(|p| accessor()).unwrap_or_else(|_| legacy_join)` is more
# readable than `map_or_else(|_| legacy, |p| accessor())` because the
# success path is the dominant case and naturally sits first.
map_unwrap_or = "allow"
#
# File-extension comparisons — Mustard convention is lowercase-only extensions
# (`.md`, `.json`, `.rs`, `.toml`). A case-insensitive match would over-match
# files we intentionally ignore (e.g. screenshot `.PNG` from external tools).
case_sensitive_file_extension_comparisons = "allow"

# `.unwrap()` panics — a panic in a hook breaks the fail-open contract. Deny
# it crate-wide. Clippy already exempts `#[cfg(test)]` code from this lint, so
# test modules may still use `.unwrap()`.
unwrap_used = "deny"
