[package]
name = "mustard-mcp"
version.workspace = true
edition = "2024"
rust-version = "1.85"
description = "Mustard MCP face: the `mustard-memory` Model Context Protocol server (JSON-RPC over stdio), extracted from `mustard-rt` into its own binary so Claude Code holds a different exe than the enforcement runtime — decoupling the long-lived MCP server from `mustard-rt` rebuilds."
license = "MIT"
publish = false

[[bin]]
name = "mustard-mcp"
path = "src/main.rs"

[lib]
name = "mustard_mcp"
path = "src/lib.rs"

# Dependency versions live in the workspace `[workspace.dependencies]` table
# (root Cargo.toml); each crate references them with `{ workspace = true }`.
# These are the exact deps the `mcp` module needs — lifted verbatim from the
# set apps/rt declared for its (now-removed) `mcp` face.
[dependencies]
mustard-core = { path = "../../packages/core" }
serde = { workspace = true }
serde_json = { workspace = true }

# `rmcp` is the official Rust MCP SDK (server + stdio transport); `tokio` is the
# async runtime `rmcp` mandates. The handler spins up a `current_thread` runtime
# locally inside `run`, so nothing else in the binary touches async.
rmcp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# `tempfile` powers the `get_run_summary` fixture tests (plant session metric
# NDJSON under a temp `.claude/` tree). Test-only — no runtime dependency.
tempfile = { workspace = true }

# Inherit the workspace lint table (pedantic = warn, unwrap_used = deny,
# unsafe_code = forbid). See the root Cargo.toml `[workspace.lints]`.
[lints]
workspace = true
