[package]
name = "mustard-rt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Mustard enforcement runtime: a single binary that replaces the per-hook `node` processes — a dispatcher running enforcement modules behind the `mustard-core` Check/Observer contract."
license = "MIT"
publish = false
build = "build.rs"

[[bin]]
name = "mustard-rt"
path = "src/main.rs"

[lib]
name = "mustard_rt"
path = "src/lib.rs"

# Dependency versions live in the workspace `[workspace.dependencies]` table
# (root Cargo.toml); each crate references them with `{ workspace = true }`.
[dependencies]
mustard-core = { path = "../../packages/core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

# The `otel-collector` / `diagnose-otel` ports (Wave 6) need a local OTLP/JSON
# receiver. `tiny_http` is a minimal blocking HTTP server with no tokio/async
# runtime; events land in per-spec NDJSON via the W5 router (no SQLite).
tiny_http = "0.12"

# The `mcp` face re-ports the `mustard-memory` MCP server. `rmcp` is the
# official Rust MCP SDK (server + stdio transport); `tokio` is the async
# runtime `rmcp` mandates. `tokio` is scoped to the `mcp` face only — the
# handler spins up a `current_thread` runtime locally, so `on` / `run` /
# `check` stay synchronous.
rmcp = { workspace = true }
tokio = { workspace = true }

# `artifact-update` probes external upstreams (crates.io API, skills.directory
# registry) over HTTP. `ureq` is the workspace's blocking, runtime-free HTTP
# client — the same one `mustard-cli` uses; no async runtime is pulled in.
ureq = { workspace = true }

# `tempfile` is used by the `artifact-update --apply` engine to stage a `git
# clone` before swapping the vendored tree under `apps/cli/templates/`. Also
# powers the `bash_guard` parity tests.
tempfile = { workspace = true }

# `notify` powers the opt-in `transcript-watcher` daemon (Wave 3, economia-moat-
# unification). The watcher re-ingests `~/.claude/projects/**/*.jsonl` into the
# economy `spans` table whenever Claude Code appends a turn. Pinned to the same
# 6.x line as `apps/dashboard/src-tauri` so the workspace shares one `notify`
# resolution. Production callers are fail-open: a missing/unparseable event is
# warned via `eprintln!` and the loop continues.
notify = { workspace = true }

# Data-parallelism for the single-pass file visitor in `scan::file_utils::visit`.
# The visitor walks each subproject once and reads every relevant file in
# parallel; rayon's work-stealing pool turns the per-file I/O into a near-linear
# speedup on multi-core machines. Pinned via the workspace table.
rayon = { workspace = true }

# SHA-256 for the `backup-specs` MANIFEST.json digest. Same crate
# `mustard-core::model::provenance` already pulls — pinning to the same minor
# keeps the workspace on one `sha2` graph.
sha2 = "0.10.9"

[dev-dependencies]

# Inherit the workspace lint table (pedantic = warn, unwrap_used = deny,
# unsafe_code = forbid). See the root Cargo.toml `[workspace.lints]`.
[lints]
workspace = true
